Bug fixes + String builder

--- a/PickaxeEggs/config.yml
+++ b/PickaxeEggs/config.yml
@@ -1,3 +1,9 @@
+##################################
+#       PickaxeEggs plugin       #
+#               by               #
+#          SpaicyGaming          #
+##################################
+
 Items:
   item-name: '&6Gigadrill'
   radius: 2
